agregue entidades y distintas interfaces