@@ -1,9 +1,9 @@
 package Parches.Alpha.Domain.Model;
 
-
-import lombok.Getter;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
@@ -12,38 +12,36 @@ import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
-@Getter
+@Data
 @Builder
+@NoArgsConstructor
 @AllArgsConstructor
 public class Post {
+
     @Builder.Default
-    private final UUID id = UUID.randomUUID();
+    private UUID id = UUID.randomUUID();
     private String text;
     private String photoUrl;
-    @Builder.Default
-    private final LocalDateTime createdAt = LocalDateTime.now();
-    @Builder.Default
-    private final List<Comment> comments = new ArrayList<>();
-    @Builder.Default
-    private final List<Reaction> reactions = new ArrayList<>();
 
-    public static class PostBuilder {
-        public Post build() {
-            boolean hasText = Optional.ofNullable(this.text).filter(t -> !t.trim().isEmpty()).isPresent();
-            boolean hasPhoto = Optional.ofNullable(this.photoUrl).filter(p -> !p.trim().isEmpty()).isPresent();
+    @Builder.Default
+    private LocalDateTime createdAt = LocalDateTime.now();
 
-            if (!hasText && !hasPhoto) {
-                throw new RuntimeException("Una publicación debe contener obligatoriamente texto, una foto o ambos.");
-            }
+    @Builder.Default
+    private List<Comment> comments = new ArrayList<>();
 
-            return new Post(
-                    this.id$set ? this.id$value : UUID.randomUUID(),
-                    this.text,
-                    this.photoUrl,
-                    this.createdAt$set ? this.createdAt$value : LocalDateTime.now(),
-                    this.comments$set ? this.comments$value : new ArrayList<>(),
-                    this.reactions$set ? this.reactions$value : new ArrayList<>()
-            );
+    @Builder.Default
+    private List<Reaction> reactions = new ArrayList<>();
+    private UUID authorId;
+
+    /**
+     * Valida de forma funcional que la publicación contenga texto o foto.
+     */
+    public void validate() {
+        boolean hasText = Optional.ofNullable(this.text).filter(t -> !t.trim().isEmpty()).isPresent();
+        boolean hasPhoto = Optional.ofNullable(this.photoUrl).filter(p -> !p.trim().isEmpty()).isPresent();
+
+        if (!hasText && !hasPhoto) {
+            throw new RuntimeException("Una publicación debe contener obligatoriamente texto, una foto o ambos.");
         }
     }
 
@@ -52,28 +50,38 @@ public class Post {
                 .filter(t -> !t.trim().isEmpty())
                 .orElseThrow(() -> new RuntimeException("El texto del comentario no puede estar vacío."));
 
+        this.comments = Optional.ofNullable(this.comments).orElseGet(ArrayList::new);
         this.comments.add(Comment.builder().authorId(authorId).text(text).build());
     }
 
     public void toggleReaction(UUID studentId) {
-        Optional<Reaction> existingReaction = this.reactions.stream()
-                .filter(r -> r.getStudentId().equals(studentId))
-                .findFirst();
+        this.reactions = Optional.ofNullable(this.reactions).orElseGet(ArrayList::new);
 
-        existingReaction.ifPresentOrElse(
-                this.reactions::remove,
-                () -> this.reactions.add(Reaction.builder().studentId(studentId).build())
-        );
+        this.reactions.stream()
+                .filter(r -> studentId.equals(r.getStudentId()))
+                .findFirst()
+                .ifPresentOrElse(
+                        this.reactions::remove,
+                        () -> this.reactions.add(Reaction.builder().studentId(studentId).build())
+                );
     }
 
     public void toggleCommentReaction(UUID studentId, UUID commentId) {
-        this.comments.stream()
-                .filter(c -> c.getId().equals(commentId))
+        Optional.ofNullable(this.comments)
+                .orElseGet(ArrayList::new)
+                .stream()
+                .filter(c -> commentId.equals(c.getId()))
                 .findFirst()
                 .orElseThrow(() -> new RuntimeException("El comentario especificado no existe en esta publicación."))
                 .toggleReaction(studentId);
     }
 
-    public List<Comment> getComments() { return Collections.unmodifiableList(comments); }
-    public List<Reaction> getReactions() { return Collections.unmodifiableList(reactions); }
+    // Vistas seguras expuestas al exterior
+    public List<Comment> getUnmodifiableComments() {
+        return Optional.ofNullable(this.comments).map(Collections::unmodifiableList).orElse(List.of());
+    }
+
+    public List<Reaction> getUnmodifiableReactions() {
+        return Optional.ofNullable(this.reactions).map(Collections::unmodifiableList).orElse(List.of());
+    }
 }
